--- a/media/css/style.css
+++ b/media/css/style.css
@@ -5,7 +5,7 @@ html, body {
 }
 body {
     font-family: sans-serif;
-    background: rgb(255,255,255);
+    background: #2980b9;
 }
 .nav {
     position: fixed;
@@ -13,8 +13,7 @@ body {
     top: 0;
     bottom: 0;
     width: 440px;
-    background: linear-gradient(to bottom right,rgb(255,255,255),rgb(220,220,220));
-    border-right: 1px solid rgb(200,200,200);
+    background: rgb(255,255,255);
     box-shadow: 0 0 30px rgba(0,0,0,0.1);
     z-index: 10;
     overflow-y: auto;
@@ -49,7 +48,7 @@ body {
     color: #2c3e50;
 }
 .nav .head .location {
-    margin: 20px 0 0 0;
+    margin: 40px 0 0 0;
     font-size: 10px;
     color: #2c3e50;
 }
@@ -83,7 +82,7 @@ body {
     width: calc(100% - 33px);
 }
 .nav .head .buttons {
-    margin: 30px 0 0 0;
+    margin: 50px 0 0 0;
 }
 .nav .head .buttons span {
     display: block;
@@ -93,10 +92,11 @@ body {
 }
 .nav .head .buttons a {
     display: inline-block;
-    padding: 7px 50px;
+    padding: 12px 0;
+    width: calc((100% / 2) - 29px);
     background: #2980b9;
     color: white;
-    font-size: 12px;
+    font-size: 11px;
     border-radius: 2px;
     text-align: center;
     text-decoration: none;
@@ -113,12 +113,13 @@ body {
 
 .app-view {
     position: fixed;
-    left: 442px;
+    left: 441px;
     top: 0;
     right: 0;
     bottom: 0;
     overflow: hidden;
     overflow-y: auto;
+    color: white;
 }
 .app-view .marklet {
     margin: 40px auto;
@@ -137,10 +138,8 @@ body {
 
 .app-view .comps .pres {
     font-size: 17px;
-    color: #2c3e50;
+    color: #ffffff;
     margin: 0 0 14px 0;
-    padding: 0 0 9px 0;
-    border-bottom: 1px solid rgb(200,200,200);
 }
 .app-view .comps {
     max-width: 500px;
@@ -167,10 +166,11 @@ body {
 .app-view .comps .comp .comp-data .comp-title {
     font-size: 12px;
     font-weight: bold;
-    color: #2c3e50;
+    color: rgb(255, 255, 255);
 }
 .app-view .comps .comp .comp-data .comp-text {
     font-size: 10px;
+    color: rgba(255, 255, 255, 0.699);
 }
 
 
@@ -192,4 +192,17 @@ body {
         max-width: 800px;
         animation: marklet-open linear .2s forwards;
     }
+}
+
+
+.app-nac {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    line-height: 50px;
+    height: 50px;
+}
+.app-nac .container {
+    padding: 0 20px;
 }
