--- a/media/css/style.css
+++ b/media/css/style.css
@@ -182,6 +182,22 @@ body {
         width: auto;
         border-right: none;
         border-bottom: 1px solid rgb(200,200,200);
+        text-align: center;
+    }
+    .nav .head img {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .nav .head .dispo {
+        text-align: left;
+    }
+    .nav .head .location {
+        text-align: left;
+    }
+    .nav .head .buttons a {
+        width: auto;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     .app-view {
         position: unset;
