--- a/media/css/style.css
+++ b/media/css/style.css
@@ -183,6 +183,7 @@ body {
         border-right: none;
         border-bottom: 1px solid rgb(200,200,200);
         text-align: center;
+        height: 100vh;
     }
     .nav .head img {
         margin-left: auto;
@@ -193,6 +194,12 @@ body {
     }
     .nav .head .location {
         text-align: left;
+    }
+    .nav .head .buttons {
+        position: absolute;
+        left: 20px;
+        bottom: 20px;
+        right: 20px;
     }
     .nav .head .buttons a {
         width: auto;
