--- a/media/css/style.css
+++ b/media/css/style.css
@@ -185,9 +185,12 @@ body {
         text-align: left;
         animation: none;
     }
-    .nav .head img {
-        margin-left: auto;
-        margin-right: auto;
+    .nav .head img.avatar {
+        padding: 10px;
+        background: white;
+        box-shadow: 0 4px 20px rgba(0,0,0,.1);
+        margin: 0 0 30px 0;
+        border-radius: 100%;
     }
     .nav .head .location {
         display: inline-block;
